@@ -42,6 +42,8 @@ Version 1.4
 - Support `Offload <http://offload.codeplay.com>`_ C++ Extensions as
   keywords in the C++ lexer (#484).
 
+- Escape more characters in LaTeX output (#505).
+
 
 Version 1.3.1
 -------------
